--- a/css/front.css
+++ b/css/front.css
@@ -85,6 +85,7 @@
 	.cd-timeline-img{
 		background-color: #547e3d;
 	}
+
 /* ======================= WIDESCREEN+ ===================================== */
 
 @media (min-width: 768px) {
@@ -108,7 +109,7 @@
 	#r2a{
 		height: 15%;
 	    padding-left: 20%;
-	    padding-right: 21%;
+	    padding-right: 20%;
 	    width: 100%;
 	}
 
